Fix for jumping page when scrollbar appears. Small corrections.

--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -10,6 +10,9 @@
  * Core: General Layout Style
  * -------------------------
  */
+html {
+  overflow-y: scroll;
+}
 html,
 body {
   min-height: 100%;
@@ -3187,7 +3190,7 @@ table.text-center th {
 }
 .login-box,
 .register-box {
-  width: 360px;
+  width: 500px;
   margin: 7% auto;
 }
 @media (max-width: 768px) {
